# CheckedC_with_RLBox

./: .gitmodules  OldReadme.md  README.md
RL-C-Prototype/: .Makefile.swp  .main.cpp.swo  .main.cpp.swp  Makefile  README.md  core  hello  lib_wasm.c  lib_wasm.h  main.cpp  mylibheader.hpp
RL-C-Prototype/include/lib1/: .mylib.c.swp  mylib.c
RL-C-Prototype/include/lib2_tiny_bignum/: bn.c  core
RL-C-Prototype/include/library_1/: mylib.c  mylib.h
RL-C-Prototype/include/library_2/: .bn.c.swp  README.txt  bn.h
RL-C-Prototype/include/library_3/: .lib.c.swo  .lib_struct_file.h.swp  .tainted_sub_functions.cpp.swp  lib.c  lib.h  lib.wasm  tainted_sub_functions.cpp  tainted_sub_functions.hpp
RL-C-Prototype/include/rlbox/: .rlbox_noop_sandbox.hpp.swp  .rlbox_stdlib_polyfill.hpp.swp
RL-C-Prototype/rlbox_core_engine/: .mylibheader.hpp.swp  .rlbox_engine_main.cpp.swo  .rlbox_engine_main.cpp.swp  mylibheader.hpp  rlbox_basic_headers.hpp  rlbox_basic_headers_for_wasm.hpp  rlbox_engine_lib_2.cpp  rlbox_engine_main.cpp
RL-CC-Prototype/: README.md
RL-CC-Prototype/checked_c_library/icecast/: Makefile  compile_commands.json
RL-CC-Prototype/rlbox_checkedc_playground/: README.md
RL-CC-Prototype/rlbox_checkedc_playground/checked_calling_unchecked/struct_marshalling_wasm/: CMakeLists.txt  Makefile  safe_library.c
RL-CC-Prototype/unsafe_library/icecast/examples/icecast_auth-1.0/: Makefile  Makefile.am  README  adduser.php  configure.ac  deletemount.php  edituser.php  index.php  style.css  testauth.php
RL-CC-Prototype/unsafe_library/icecast/examples/icecast_auth-1.0/images/.svn/text-base/: icecast_logo.gif.svn-base
RL-CC-Prototype/unsafe_library/icecast/examples/icecast_auth-1.0/images/.svn/wcprops/: corner_bottomleft.jpg.svn-work  corner_bottomleft.png.svn-work  corner_bottomright.png.svn-work  corner_topleft.jpg.svn-work  corner_topleft.png.svn-work  custom_corners_bottomleft.gif.svn-work  custom_corners_bottomleft.png.svn-work  custom_corners_topleft.gif.svn-work  custom_corners_topleft.png.svn-work  custom_corners_topleft2.png.svn-work  custom_corners_topright.png.svn-work  icecast.png.svn-work
c_src/: .wasm2c_sandbox_wrapper.c.swp
docs/background/: checkedc.md  rlbox.md
example_noop_checkedC_rlbox/: hello  main.cpp
hello-world-noop/: Makefile  a.out  hello  main.cpp  mylibheader.hpp
hello-world-noop-checkedc/: .all:.swp  README.md  core  hello  lib_struct_file.h  main.cpp  mylib.h  mylibheader.hpp
rlbox_playground/: README.md
rlbox_playground/basic_operations/: execute  safe_library.c  unsafe_library.c  unsafe_library.h
rlbox_playground/struct_marshalling/: .Makefile.swp  Makefile  execute  safe_library.c
rlbox_playground/wasm_sandbox/: main.cpp  solution.cpp
rlbox_playground/wasm_sandbox_host_error/: .solution.cpp.swp  solution.cpp
rlbox_playground/wasm_sandbox_sandbox_error/: CMakeLists.txt
rlbox_playground/wasm_sandbox_use_after_free_in_sandbox/: solution.cpp
(+267 files in other folders)
