## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.6 foreign dist-zip

EXTRA_DIST = \
				action.php \
				adduser.php \
				config.php \
				COPYING \
				db.php \
				deletemount.php \
				edituser.php \
				error.php \
				footer.php \
				header.php \
				icecast_auth.sql \
				images \
				index.php \
				info.php \
				listusers.php \
				login.php \
				logout.php \
				main.php \
				mountpoints.php \
				README \
				reports.php \
				style.css \
				testauth.php

